<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/activity_main_drawer_topstories"
            android:title="@string/nav_drawer_topstories" />
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/activity_main_drawer_mostpopular"
            android:title="@string/nav_drawer_mostpopular" />
    </group>

    <item android:title="@string/nav_drawer_categories">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/activity_main_drawer_business"
                    android:title="@string/business" />
                <item
                    android:id="@+id/activity_main_drawer_sports"
                    android:title="@string/sports" />
                <item
                    android:id="@+id/activity_main_drawer_arts"
                    android:title="@string/arts" />
            </group>
        </menu>
    </item>

</menu>